# SBSCR-router

./: .env.example  .gitignore  FREE_TIER_SETUP.md  LICENSE  PRODUCTION_GUIDE.md  PROJECT_SUMMARY.md  README.md  debug_hf.py  debug_lmsys.py  direct_download.py  download_arena.py  download_arena_requests.py  download_lmsys_chunk.py  download_lmsys_parquet.py  final_validation.py  get_arena_data.py  get_code_data.py  get_public_data.py  last_try_download.py  process_local_data.py  pyproject.toml  render.yaml  requirements.txt  run_judgment.py  run_mt_bench.py  serve.py  test_alpaca.py  test_hf.py  test_hf_arena.py  update_fast_path.py  vercel.json
.agent/workflows/: setup_backend.md
api/: index.py
demo/: QUICKSTART.md  README.md  index.html  run_demo.py  script.js  styles.css
sbscr/: __init__.py
sbscr/core/: __init__.py  intent.py  lsh.py  metadata.py  models.py  registry.py
sbscr/evaluation/: __init__.py  datasets.py  metrics.py  runner.py
sbscr/inference/: __init__.py  evaluator.py  llm_client.py
sbscr/providers/: __init__.py  base.py  google_provider.py  groq_provider.py  huggingface_provider.py  together_provider.py
sbscr/routers/: __init__.py  base.py  hybrid.py  keyword.py  random.py  sbscr.py  semantic.py
scripts/: bootstrap_router.py  gemini_calibrate.py  generate_data.py  ingest_lmsys.py  run_benchmarks.py  run_end_to_end.py  train_enterprise.py  train_router.py  validate.py
